@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T16:09:55Z",
-  "count_outdated" : 29,
-  "uniques_outdated" : 23,
-  "count" : 34,
-  "uniques" : 28,
+  "timestamp" : "2022-06-04T00:39:41Z",
+  "count_outdated" : 36,
+  "uniques_outdated" : 30,
+  "count" : 38,
+  "uniques" : 32,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 7 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 7 ]
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 1,
