@@ -1,3 +1,10 @@
+2022-06-04T00:39:41Z:
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 23 29 / 28 34
+* notice: next accum: outdated-unq outdated-all / unq all: 30 36 / 32 38
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-20] / []
+
 2022-06-03T16:09:55Z:
 * notice: last 14d: unq all: 5 5
 * notice: prev accum: outdated-unq outdated-all / unq all: 23 29 / 29 35
